# aws-cloudformation-samples

./: README.md
hooks/: .gitignore  README.md  publish.sh  publish.template.yaml
hooks/java-hooks/: README.md
hooks/java-hooks/ec2-instance-types/: .gitignore  .pre-commit-config.yaml  .rpdk-config  README.md  awssamples-ec2instancetypes-hook.json  hook-role.yaml  pom.xml  template.yml
hooks/python-hooks/: README.md
hooks/python-hooks/lambda-function-invoker/example-lambda-functions/s3-versioning-enabled/cpp/: CMakeLists.txt  README.md  build-and-invoke.sh  main.cpp  template.yml
modules/: README.md
modules/ACMCertNotifyExpiry/: .rpdk-config  README.md  base.yaml  example-usage.yaml  schema.json
modules/ApiGatewayCustomDomain/: .rpdk-config  Config  README.md  apigw-hello-world.yml  schema.json
modules/EC2ImageBuilderGoldenAMI/: .gitignore  .rpdk-config  Config  README.md  schema.json
modules/S3BucketBlog/: .rpdk-config  Readme.md  firehose.yaml  schema.json
modules/VpcWizard/: .gitignore  .rpdk-config  Readme.md  schema.json  setup
resource-types/VSCodeRemoteDevelopment/: .gitignore  .npmrc  .rpdk-config  Dockerfile  README.md  awssamples-devtools-devinstance.json  env.template.json  npm-shrinkwrap.json  package-lock.json  package.json  resource-role.yaml  template.yml  tsconfig.json
resource-types/typescript-example-website-monitor/: .gitignore  .npmrc  .rpdk-config  README.md  example-monitoring-website.json  example.yml  overrides.json  package-lock.json  package.json  resource-role.yaml  template.yml  tsconfig.json
(+1222 files in other folders)
